<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Updater</string>
    <string name="app_full_name">Fairphone Updater</string>
    <string name="fairphone">Fairphone</string>
    <string name="android">Android</string>
    <string name="updater_service">Updater Service</string>
    <string name="a_different_os_from_the_current">a different operating system from your current one.</string>
    <string name="an_older_version_of_os">an older version of your current operating system.</string>
    <string name="android_os">Stock Android</string>
    <string name="config_file_download_link_error_message">Error downloading config file. Link used:</string>
    <string name="dev_mode_message">Developer mode enabled for this session</string>
    <string name="device_not_supported_message">Device not supported</string>
    <string name="download_complete">Download complete</string>
    <string name="download_started">Download started</string>
    <string name="erase_all_data_warning_message">This update will erase all your data.</string>
    <string name="erase_all_partitions_warning_message">This update will erase all your data.\nDo you want to continue?</string>
    <string name="error_downloading">Error downloading</string>
    <string name="fairphone_os">Android for Fairphone</string>
    <string name="fairphone_update_message">New Fairphone update available</string>
    <string name="fairphone_update_message_title">Checking for updates</string>
    <string name="go_ahead_and_install_it">Install it</string>
    <string name="google_apps_disclaimer_agree">I Agree</string>
    <string name="google_apps_disclaimer_description">For the full Android and Google mobile experience like the app store, your phone needs extra content and software. Unfortunately, as Fairphone doesn\'t have a license yet, we cannot pre-install this content, nor can we provide it directly ourselves. We are working with the content owner to achieve this.\nPress « I Agree » below to download this content from an external secured source. Installing this content is your own responsibility.\nIf you do not agree, your phone will still work with basic Android apps, of course, but you will miss some services from Google.</string>
    <string name="google_apps_disclaimer_title">Install Google Apps</string>
    <string name="google_apps_initial_title">Install\nGoogle Apps</string>
    <string name="google_apps_installer_name">Google Apps Installer</string>
    <string name="google_apps_re_install_description">Remove this or\nclick to reinstall</string>
    <string name="google_apps_re_install_title">Google Apps installed</string>
    <string name="important_notice">Important notice</string>
    <string name="important_notice_message">It\'s important that you keep in mind that installing other operating systems will change the user experience.</string>
    <string name="install">Install</string>
    <string name="install_update">Install update</string>
    <string name="installed">Installed</string>
    <string name="invalid_md5_download_message">Invalid file downloaded: Wrong MD5.</string>
    <string name="invalid_signature_download_message">Invalid file downloaded: Bad signature</string>
    <string name="latest_version">Latest version</string>
    <string name="new_os">New operating system</string>
    <string name="no_space_available_cache_message">No space available on /cache.</string>
    <string name="no_space_available_sd_card_message">No space available on SD card.</string>
    <string name="additional_download">Additional download</string>
    <string name="older_version_os_install_confirmation">Are you sure you want to continue?</string>
    <string name="older_version_os_install_confirmation_checkbox">I know and understand all implications of performing this installation</string>
    <string name="additional_downloads">Additional download(s)</string>
    <string name="os_update_has_started_message">The update has started. This may take some time depending on your network connection speed.</string>
    <string name="other_os_options">Enter advanced mode</string>
    <string name="please_be_patient">Just a moment&#8230;</string>
    <string name="restart">Restart</string>
    <string name="restart_your_phone_message">Restart your phone to complete the update.</string>
    <string name="take_me_back">Take me back</string>
    <string name="update_is_available">Update is available</string>
    <string name="update_version">Update version</string>
    <string name="want_to_change_your_os">Are you an advanced user?</string>
    <string name="warning">Warning</string>
    <string name="wifi_disabled">Wi-Fi disabled</string>
    <string name="wifi_discaimer_message">The file you\'re trying to download is too large for mobile connections. Please connect to a Wi-Fi network and try again.</string>
    <string name="your_are_about_to_install">You are about to install</string>
    <string name="your_current_os_version">Your current operating system version</string>
    <string name="your_os_is_up_to_date">Your operating system is up-to-date</string>
    <string name="fairphone_os_info">This Android for Fairphone operating system has an extra layer of Fairphone flavor with features like the Peace of Mind widget, Edge Swipe, and the Last Used / Most Used Apps widget.\n\nWe recommend installing Android for Fairphone on your device to have the best Fairphone experience.</string>
    <string name="android_os_info">This Stock Android operating system is the pure Android experience without any additional Fairphone modifications.</string>
    <string name="about">about</string>
    <string name="gapps_store_install">Install Google Apps</string>
    <string name="gapps_store_hide_reminder">or close this reminder</string>
    <string name="title_activity_beta_enabler">Fairphone Beta Program</string>
    <string name="enable_beta">Enable Beta</string>
    <string name="beta_is_enabled">Beta is enabled</string>
    <string name="beta_activation_failed">Failed to activate beta</string>
    <string name="failed_mkdirs_cache_message">Failed to create directories on /cache</string>
    <string name="copy_to_cache_failed_message">Failed to copy file to /cache</string>
    <string name="file_not_found_message">File not found</string>
    <string name="reboot_failed">Error rebooting to recovery</string>
    <string name="command_write_to_cache_failed">Error writing commands to /cache</string>
    <string name="wifi_discaimer_message_startup">You need to connect to a Wi-Fi network to check for updates or install software.</string>
    <string name="appStoreReinstall">Reinstall the app store</string>
    <string name="app_store">App Stores</string>
    <string name="connect_to_wifi">Please connect to a Wi-Fi network</string>
    <string name="charge_battery">Please charge your battery to at least 40%</string>
    <string name="got_it">Got it</string>
    <string name="beta_mode">beta mode</string>
    <string name="connect_to_internet">Make sure you\'re connected to the internet</string>

</resources>
